gccida/c3/subst_stack_regs_pat
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1886:4: error: expected ';' after expression
rtx v7; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1886:5: error: use of undeclared identifier 'v7'
rtx v7; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1889:4: error: expected ';' after expression
rtx v10; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1889:5: error: use of undeclared identifier 'v10'
rtx v10; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1912:4: error: expected ';' after expression
rtx regno_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1912:5: error: use of undeclared identifier 'regno_note'
rtx regno_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1916:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1916:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1919:6: error: use of undeclared identifier 'v40'
rtx *v40; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1923:6: error: use of undeclared identifier 'v44'
rtx *v44; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1924:4: error: expected ';' after expression
rtx v45; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1924:5: error: use of undeclared identifier 'v45'
rtx v45; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1925:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1925:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1937:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1946:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1946:5: error: use of undeclared identifier 'v67'
rtx v67; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1957:6: error: use of undeclared identifier 'v78'
rtx *v78; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/reg-stack.c:1961:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst_stack_regs_pat/src/obj/reg-stack.o] Error 1
